seaqt/QtGui/gen_qstylehints.nim

import ./Qt6Gui_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt6Gui")  & " -fPIC"
{.compile("gen_qstylehints.cpp", cflags).}


import ./gen_qstylehints_types
export gen_qstylehints_types

import
  ../QtCore/gen_qchar_types,
  ../QtCore/gen_qobject,
  ../QtCore/gen_qobjectdefs_types
export
  gen_qchar_types,
  gen_qobject,
  gen_qobjectdefs_types

type cQStyleHints*{.exportc: "QStyleHints", incompleteStruct.} = object

proc fcQStyleHints_metaObject(self: pointer, ): pointer {.importc: "QStyleHints_metaObject".}
proc fcQStyleHints_metacast(self: pointer, param1: cstring): pointer {.importc: "QStyleHints_metacast".}
proc fcQStyleHints_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QStyleHints_metacall".}
proc fcQStyleHints_tr(s: cstring): struct_miqt_string {.importc: "QStyleHints_tr".}
proc fcQStyleHints_setMouseDoubleClickInterval(self: pointer, mouseDoubleClickInterval: cint): void {.importc: "QStyleHints_setMouseDoubleClickInterval".}
proc fcQStyleHints_mouseDoubleClickInterval(self: pointer, ): cint {.importc: "QStyleHints_mouseDoubleClickInterval".}
proc fcQStyleHints_mouseDoubleClickDistance(self: pointer, ): cint {.importc: "QStyleHints_mouseDoubleClickDistance".}
proc fcQStyleHints_touchDoubleTapDistance(self: pointer, ): cint {.importc: "QStyleHints_touchDoubleTapDistance".}
proc fcQStyleHints_setMousePressAndHoldInterval(self: pointer, mousePressAndHoldInterval: cint): void {.importc: "QStyleHints_setMousePressAndHoldInterval".}
proc fcQStyleHints_mousePressAndHoldInterval(self: pointer, ): cint {.importc: "QStyleHints_mousePressAndHoldInterval".}
proc fcQStyleHints_setStartDragDistance(self: pointer, startDragDistance: cint): void {.importc: "QStyleHints_setStartDragDistance".}
proc fcQStyleHints_startDragDistance(self: pointer, ): cint {.importc: "QStyleHints_startDragDistance".}
proc fcQStyleHints_setStartDragTime(self: pointer, startDragTime: cint): void {.importc: "QStyleHints_setStartDragTime".}
proc fcQStyleHints_startDragTime(self: pointer, ): cint {.importc: "QStyleHints_startDragTime".}
proc fcQStyleHints_startDragVelocity(self: pointer, ): cint {.importc: "QStyleHints_startDragVelocity".}
proc fcQStyleHints_setKeyboardInputInterval(self: pointer, keyboardInputInterval: cint): void {.importc: "QStyleHints_setKeyboardInputInterval".}
proc fcQStyleHints_keyboardInputInterval(self: pointer, ): cint {.importc: "QStyleHints_keyboardInputInterval".}
proc fcQStyleHints_keyboardAutoRepeatRate(self: pointer, ): cint {.importc: "QStyleHints_keyboardAutoRepeatRate".}
proc fcQStyleHints_setCursorFlashTime(self: pointer, cursorFlashTime: cint): void {.importc: "QStyleHints_setCursorFlashTime".}
proc fcQStyleHints_cursorFlashTime(self: pointer, ): cint {.importc: "QStyleHints_cursorFlashTime".}
proc fcQStyleHints_showIsFullScreen(self: pointer, ): bool {.importc: "QStyleHints_showIsFullScreen".}
proc fcQStyleHints_showIsMaximized(self: pointer, ): bool {.importc: "QStyleHints_showIsMaximized".}
proc fcQStyleHints_showShortcutsInContextMenus(self: pointer, ): bool {.importc: "QStyleHints_showShortcutsInContextMenus".}
proc fcQStyleHints_setShowShortcutsInContextMenus(self: pointer, showShortcutsInContextMenus: bool): void {.importc: "QStyleHints_setShowShortcutsInContextMenus".}
proc fcQStyleHints_passwordMaskDelay(self: pointer, ): cint {.importc: "QStyleHints_passwordMaskDelay".}
proc fcQStyleHints_passwordMaskCharacter(self: pointer, ): pointer {.importc: "QStyleHints_passwordMaskCharacter".}
proc fcQStyleHints_fontSmoothingGamma(self: pointer, ): float64 {.importc: "QStyleHints_fontSmoothingGamma".}
proc fcQStyleHints_useRtlExtensions(self: pointer, ): bool {.importc: "QStyleHints_useRtlExtensions".}
proc fcQStyleHints_setFocusOnTouchRelease(self: pointer, ): bool {.importc: "QStyleHints_setFocusOnTouchRelease".}
proc fcQStyleHints_tabFocusBehavior(self: pointer, ): cint {.importc: "QStyleHints_tabFocusBehavior".}
proc fcQStyleHints_setTabFocusBehavior(self: pointer, tabFocusBehavior: cint): void {.importc: "QStyleHints_setTabFocusBehavior".}
proc fcQStyleHints_singleClickActivation(self: pointer, ): bool {.importc: "QStyleHints_singleClickActivation".}
proc fcQStyleHints_useHoverEffects(self: pointer, ): bool {.importc: "QStyleHints_useHoverEffects".}
proc fcQStyleHints_setUseHoverEffects(self: pointer, useHoverEffects: bool): void {.importc: "QStyleHints_setUseHoverEffects".}
proc fcQStyleHints_wheelScrollLines(self: pointer, ): cint {.importc: "QStyleHints_wheelScrollLines".}
proc fcQStyleHints_setWheelScrollLines(self: pointer, scrollLines: cint): void {.importc: "QStyleHints_setWheelScrollLines".}
proc fcQStyleHints_setMouseQuickSelectionThreshold(self: pointer, threshold: cint): void {.importc: "QStyleHints_setMouseQuickSelectionThreshold".}
proc fcQStyleHints_mouseQuickSelectionThreshold(self: pointer, ): cint {.importc: "QStyleHints_mouseQuickSelectionThreshold".}
proc fcQStyleHints_cursorFlashTimeChanged(self: pointer, cursorFlashTime: cint): void {.importc: "QStyleHints_cursorFlashTimeChanged".}
proc fcQStyleHints_connect_cursorFlashTimeChanged(self: pointer, slot: int, callback: proc (slot: int, cursorFlashTime: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_cursorFlashTimeChanged".}
proc fcQStyleHints_keyboardInputIntervalChanged(self: pointer, keyboardInputInterval: cint): void {.importc: "QStyleHints_keyboardInputIntervalChanged".}
proc fcQStyleHints_connect_keyboardInputIntervalChanged(self: pointer, slot: int, callback: proc (slot: int, keyboardInputInterval: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_keyboardInputIntervalChanged".}
proc fcQStyleHints_mouseDoubleClickIntervalChanged(self: pointer, mouseDoubleClickInterval: cint): void {.importc: "QStyleHints_mouseDoubleClickIntervalChanged".}
proc fcQStyleHints_connect_mouseDoubleClickIntervalChanged(self: pointer, slot: int, callback: proc (slot: int, mouseDoubleClickInterval: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_mouseDoubleClickIntervalChanged".}
proc fcQStyleHints_mousePressAndHoldIntervalChanged(self: pointer, mousePressAndHoldInterval: cint): void {.importc: "QStyleHints_mousePressAndHoldIntervalChanged".}
proc fcQStyleHints_connect_mousePressAndHoldIntervalChanged(self: pointer, slot: int, callback: proc (slot: int, mousePressAndHoldInterval: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_mousePressAndHoldIntervalChanged".}
proc fcQStyleHints_startDragDistanceChanged(self: pointer, startDragDistance: cint): void {.importc: "QStyleHints_startDragDistanceChanged".}
proc fcQStyleHints_connect_startDragDistanceChanged(self: pointer, slot: int, callback: proc (slot: int, startDragDistance: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_startDragDistanceChanged".}
proc fcQStyleHints_startDragTimeChanged(self: pointer, startDragTime: cint): void {.importc: "QStyleHints_startDragTimeChanged".}
proc fcQStyleHints_connect_startDragTimeChanged(self: pointer, slot: int, callback: proc (slot: int, startDragTime: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_startDragTimeChanged".}
proc fcQStyleHints_tabFocusBehaviorChanged(self: pointer, tabFocusBehavior: cint): void {.importc: "QStyleHints_tabFocusBehaviorChanged".}
proc fcQStyleHints_connect_tabFocusBehaviorChanged(self: pointer, slot: int, callback: proc (slot: int, tabFocusBehavior: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_tabFocusBehaviorChanged".}
proc fcQStyleHints_useHoverEffectsChanged(self: pointer, useHoverEffects: bool): void {.importc: "QStyleHints_useHoverEffectsChanged".}
proc fcQStyleHints_connect_useHoverEffectsChanged(self: pointer, slot: int, callback: proc (slot: int, useHoverEffects: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_useHoverEffectsChanged".}
proc fcQStyleHints_showShortcutsInContextMenusChanged(self: pointer, param1: bool): void {.importc: "QStyleHints_showShortcutsInContextMenusChanged".}
proc fcQStyleHints_connect_showShortcutsInContextMenusChanged(self: pointer, slot: int, callback: proc (slot: int, param1: bool) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_showShortcutsInContextMenusChanged".}
proc fcQStyleHints_wheelScrollLinesChanged(self: pointer, scrollLines: cint): void {.importc: "QStyleHints_wheelScrollLinesChanged".}
proc fcQStyleHints_connect_wheelScrollLinesChanged(self: pointer, slot: int, callback: proc (slot: int, scrollLines: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_wheelScrollLinesChanged".}
proc fcQStyleHints_mouseQuickSelectionThresholdChanged(self: pointer, threshold: cint): void {.importc: "QStyleHints_mouseQuickSelectionThresholdChanged".}
proc fcQStyleHints_connect_mouseQuickSelectionThresholdChanged(self: pointer, slot: int, callback: proc (slot: int, threshold: cint) {.cdecl.}, release: proc(slot: int) {.cdecl.}) {.importc: "QStyleHints_connect_mouseQuickSelectionThresholdChanged".}
proc fcQStyleHints_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QStyleHints_tr2".}
proc fcQStyleHints_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QStyleHints_tr3".}
proc fcQStyleHints_staticMetaObject(): pointer {.importc: "QStyleHints_staticMetaObject".}
proc fcQStyleHints_delete(self: pointer) {.importc: "QStyleHints_delete".}

proc metaObject*(self: gen_qstylehints_types.QStyleHints, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQStyleHints_metaObject(self.h))

proc metacast*(self: gen_qstylehints_types.QStyleHints, param1: cstring): pointer =
  fcQStyleHints_metacast(self.h, param1)

proc metacall*(self: gen_qstylehints_types.QStyleHints, param1: cint, param2: cint, param3: pointer): cint =
  fcQStyleHints_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qstylehints_types.QStyleHints, s: cstring): string =
  let v_ms = fcQStyleHints_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setMouseDoubleClickInterval*(self: gen_qstylehints_types.QStyleHints, mouseDoubleClickInterval: cint): void =
  fcQStyleHints_setMouseDoubleClickInterval(self.h, mouseDoubleClickInterval)

proc mouseDoubleClickInterval*(self: gen_qstylehints_types.QStyleHints, ): cint =
  fcQStyleHints_mouseDoubleClickInterval(self.h)

proc mouseDoubleClickDistance*(self: gen_qstylehints_types.QStyleHints, ): cint =
  fcQStyleHints_mouseDoubleClickDistance(self.h)

proc touchDoubleTapDistance*(self: gen_qstylehints_types.QStyleHints, ): cint =
  fcQStyleHints_touchDoubleTapDistance(self.h)

proc setMousePressAndHoldInterval*(self: gen_qstylehints_types.QStyleHints, mousePressAndHoldInterval: cint): void =
  fcQStyleHints_setMousePressAndHoldInterval(self.h, mousePressAndHoldInterval)

proc mousePressAndHoldInterval*(self: gen_qstylehints_types.QStyleHints, ): cint =
  fcQStyleHints_mousePressAndHoldInterval(self.h)
